# smart-scraper

./: .gitignore  README.md  SmartScraper.py  SmartScrapper.py  config.json  pyproject.toml  scrapper_folder.py
